--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -2,10 +2,9 @@
   <div class="col-md-6 m-auto">
     <div class="card card-body text-center">
       <h1 class="mb-3">
-        <img src="/secure-icon.png" alt="icon" width="20%" />
+        <img src="/secure-icon.png" alt="icon" width="10%" />
       </h1>
-      <%= msg %>
-      <h2>Login</h2>
+      <h2>Reset password</h2>
       <form action="/auth/login" method="POST">
         <div class="form-group">
           <label for="email">Email</label>
@@ -17,7 +16,7 @@
             placeholder="Enter Email"
           />
         </div>
-        <div class="form-group">
+        <div class="form-group" hidden>
           <label for="password">Password</label>
           <input
             type="password"
@@ -27,10 +26,9 @@
             placeholder="Enter Password"
           />
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Login</button>
+        <button type="submit" class="btn btn-primary btn-block">Reset Password</button>
       </form>
-      <p class="mt-4">New User? <a href="/auth/register">Register</a></p>
-      <p>Forgot Password? <a href="/auth/forgot">Reset</a></p>
+      <p class="mt-4"><a href="/auth/login">Go Back</a></p>
     </div>
   </div>
 </div>
