--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,11 +2,10 @@
   <div class="col-md-6 m-auto">
     <div class="card card-body text-center">
       <h1 class="mb-3">
-        <img src="/secure-icon.png" alt="icon" width="20%" />
+        <img src="/secure-icon.png" alt="icon" width="10%" />
       </h1>
-      <%= msg %>
-      <h2>Login</h2>
-      <form action="/auth/login" method="POST">
+      <h2>Register</h2>
+      <form action="/auth/register" method="POST"> 
         <div class="form-group">
           <label for="email">Email</label>
           <input
@@ -14,7 +13,7 @@
             id="email"
             name="email"
             class="form-control"
-            placeholder="Enter Email"
+            placeholder="Choose Email"
           />
         </div>
         <div class="form-group">
@@ -24,13 +23,12 @@
             id="password"
             name="password"
             class="form-control"
-            placeholder="Enter Password"
+            placeholder="Choose Password"
           />
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Login</button>
+        <button type="submit" class="btn btn-primary btn-block">Create Account</button>
       </form>
-      <p class="mt-4">New User? <a href="/auth/register">Register</a></p>
-      <p>Forgot Password? <a href="/auth/forgot">Reset</a></p>
+      <p class="mt-4">Already have an account? <a href="/auth/login">Login</a></p>
     </div>
   </div>
 </div>
